# dorf

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  README.md
.claude/commands/: build.md  unittest.md
Code/Core/: CMakeLists.txt
Code/Core/Include/Core.Base/: Misc.h  Types.h
Code/Core/Include/Core.Color/: Color.h
Code/Core/Include/Core.Logger/: Logger.h
Code/Core/Include/Core.Math/: MathUtil.h  Vector4f.h
Code/Core/Include/Core.Memory/: LinearAllocator.h  SlabAllocator.h
Code/Core/Include/Core.UnitTest/: UnitTest.h
Code/Core/Include/Core.Vfs/: Vfs.h
Code/Core/Source/Core.ArgParser/: ArgParser.cpp
Code/Core/Source/Core.Logger/: Logger.cpp
Code/Core/Source/Core.Memory/: FixedItemPool.cpp  LinearAllocator.cpp  RangePool.cpp  SlabAllocator.cpp
Code/Core/Source/Core.UnitTest/: UnitTest.cpp
Code/Core/Source/Core.Util/: FixedItemPool.cpp
Code/Core/Source/Core.Vfs/: DiskFileSystem.cpp  Vfs.cpp
Code/Core/Tests/: CMakeLists.txt  UnitTestColor.cpp  UnitTestCore.cpp  UnitTestMath.cpp  UnitTestMisc.cpp
Code/Engine/Base/: CMakeLists.txt
Code/Engine/Base/Include/Engine.Render/: RhiDecls.h
Code/Engine/Base/Include/Engine.Render.Base/: RhiDecls.h
Code/Engine/Base/Include/Engine.Resource.Base/: Resource.h
Code/Engine/Client/: CMakeLists.txt
Code/Engine/Client/Include/Engine.DemoApp/: DemoApp.h
Code/Engine/Client/Include/Engine.Render/: DebugDraw.h
Code/Engine/Client/Include/Engine.Render/Rhi/: RhiDevice.h
Code/Engine/Client/Source/Engine.DemoApp/: DemoApp.cpp
Code/Engine/Client/Source/Engine.Render/: DebugDraw.cpp
Code/Engine/Client/Source/Engine.Render/D3D12/: D3D12CommandList.cpp  D3D12CommandQueue.cpp  D3D12DescriptorHeap.cpp  D3D12Device.cpp  D3D12Device.h  D3D12Sampler.cpp
Code/Engine/Pipeline/: CMakeLists.txt
Code/Engine/Pipeline/Include/Engine.AssetPipeline/: AssetPipeline.h
Code/Engine/Pipeline/Source/Engine.AssetPipeline/: AssetPipeline.cpp  ShaderPipeline.cpp  ShaderPipeline.h
Code/Engine/Tests/: CMakeLists.txt  UnitTestEngineUtils.cpp  UnitTestXmlDoc.cpp
Code/Engine/Utils/: CMakeLists.txt
Code/Engine/Utils/Include/Engine.Utils.XmlDoc/: XmlDoc.h
Code/Engine/Utils/Source/Engine.Utils.XmlDoc/: XmlDoc.cpp  XmlDocInternal.h  XmlLoader.cpp
Code/Examples/BasicDraw/: BasicDraw.cpp  CMakeLists.txt
Code/Tools/AssetForge/: AssetForge.cpp  CMakeLists.txt
Code/Tools/UnitTestRunner/: CMakeLists.txt  UnitTestRunner.cpp
Core/: CMakeLists.txt
Core/Include/Core.ArgParser/: ArgParser.h
Core/Include/Core.Base/: Assert.h
Core/Include/Core.Math/: MathUtil.h  Vector3f.h
Core/Include/Core.UnitTest/: UnitTest.h
Core/Include/Core.Util/: FixedItemPool.h  RangePool.h
Core/Source/Core.ArgParser/: ArgParser.cpp
Core/Source/Core.UnitTest/: UnitTest.cpp
Core/Source/Core.Util/: FixedItemPool.cpp  RangePool.cpp
Core/Tests/: CMakeLists.txt  UnitTestArgParser.cpp  UnitTestCore.cpp  UnitTestMath.cpp
Engine/Base/: CMakeLists.txt
Engine/Base/Include/Engine.Render/: RhiDecls.h
Engine/Client/: CMakeLists.txt
Engine/Client/Include/Engine.DemoApp/: DemoApp.h
Engine/Client/Include/Engine.Input/: InputManager.h
Engine/Client/Include/Engine.Render/Rhi/: RhiDevice.h
Engine/Client/Source/Engine.DemoApp/: DemoApp.cpp
Engine/Client/Source/Engine.Input/: InputManager.cpp
Engine/Client/Source/Engine.Render/D3D12/: D3D12CommandQueue.cpp  D3D12DescriptorHeap.cpp  D3D12Device.cpp  D3D12Device.h
Examples/BasicDraw/: BasicDraw.cpp
Scripts/: BuildData.bat  RunUnitTests.bat
SourceData/: EngineData.xml
SourceData/Shaders/: DebugDraw.hlsl
Tools/UnitTestRunner/: CMakeLists.txt  UnitTestRunner.cpp
